--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,68 @@
-body{
+html {
+    height: 100%;
+}
+
+body {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    min-height: 100vh;
     background-color: white;
+}
+
+a{
+    color: #ad4b28;
+    text-decoration: none;
+}
+
+a:hover{
+    color: #6f2c14;
+}
+
+
+.header {
+    padding: 20px;
+    text-align: center;
+    background: #F1EAA3;
+    color: #ad4b28;
+    font-size: 30px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+.logo-header{
+    max-width:200px;
+}
+
+.right-side-header{
+    padding-top: 10px;
+}
+
+#toggle-high-contrast{
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+    margin-right: 30px;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+#toggle-high-contrast:hover{
+    color: #6f2c14;
+}
+
+.login-page-button{
+    padding: 10px;
+    font-weight: bold;
+}
+
+
+
+
+
+
+/* high-contrast style (requires js) */
+.high-contrast {
+    color: #fff;
+    background-color: #000;
 }
