--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,1 +1,5 @@
 <h1>ADMIN PAGE for {{companyName}} (views/admin.handlebars)</h1>
+
+<h1>Users</h1>
+<p><strong>First Name: {{user.firstName}}</strong></p>
+<p>Last Name: {{user.lastName}}</p>
