--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,5 @@
 <h1>VIEWS/INDEX.HANDLEBARS PAGE HERE for {{companyName}} </h1>
+
+<h1>Users</h1>
+<p><strong>First Name: {{user.firstName}}</strong></p>
+<p>Last Name: {{user.lastName}}</p>
