--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,1 +1,25 @@
-<h1>ADMIN PAGE for {{companyName}} (views/admin.handlebars)</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ADMIN PAGE for {{companyName}} (views/admin.handlebars)</title>
+</head>
+  <h1>ADMIN PAGE for {{companyName}} (views/admin.handlebars)</h1>
+  <ul id="users"></ul>
+<body>
+    <script>
+        fetch('/users')
+      .then(response => response.json())
+      .then(users => {
+        const userList = document.getElementById('users');
+        users.forEach(user => {
+          const listItem = document.createElement('li');
+          listItem.textContent = `${user.firstName}  ${user.lastName} / ${user.email} / ${user.phoneNumber}`;
+          userList.appendChild(listItem);
+        });
+      })
+      .catch(error => console.error('Error fetching users', error));
+    </script>
+</body>
+</html>
