--- a/views/booking.handlebars
+++ b/views/booking.handlebars
@@ -14,7 +14,7 @@
         <input type="text" placeholder="Phone Number" name="phoneNumber">
         <input type="text" placeholder="Check-in (DD.MM.YYYY)" name="check-in">
         <input type="text" placeholder="Check-out (DD.MM.YYYY)" name="check-out">
-        <button type="submit" value="Send user information" onclick="">Submit</button>
+        <button type="submit" value="Submit user information" onclick="">Submit</button>
     </form>
 </body>
 </html>
