--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,25 @@
-<h1>VIEWS/INDEX.HANDLEBARS PAGE HERE for {{companyName}} </h1>
+{{!-- <h1>VIEWS/INDEX.HANDLEBARS PAGE HERE for {{companyName}} </h1> --}}
+
+<div class="upper-part-page">
+        <div class="tagline">
+            <h1 style="height: 100 px; margin: 30px;">Tagline ideas <br>
+            Every Day is a Sunny Stay<br>
+            Sunny Stay Every Day<br>
+            Sunny Day Your Way</h1>
+        </div>
+
+
+        <div class="picture-with-button">
+        <div class="cool-picture"><img class="cool-picture" src="../../public/images/coolpicture3.png"></div>
+        <div class="white-overlay"></div>
+        <a class="fill-up-booking-form-button" href="#">Sign Up</a>
+        </div>
+    </div>
+
+    <div class="popular-options">
+        <div><h2>Popular Options:</h2></div>
+        <div class="rooms-container">
+            <div class="room1 room"></div>
+            <div class="room2 room"></div>
+        </div>
+    </div>
