--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{title}} - SSS</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="../../public/images/favicon.png"> 
   </head>
   <body>
     {{{body}}}
   </body>
+</html>
 </html>
