--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 {{!-- <h1>VIEWS/INDEX.HANDLEBARS PAGE HERE for {{companyName}} </h1> --}}
-
+{{>header}}
 <div class="upper-part-page">
         <div class="tagline">
             <h1 style="height: 100 px; margin: 30px;">Tagline ideas <br>
@@ -23,3 +23,4 @@
             <div class="room2 room"></div>
         </div>
     </div>
+{{>footer}}
