--- a/public/style.css
+++ b/public/style.css
@@ -241,6 +241,28 @@ h2{
     align-items: center;
 }
 
+.booking-page-container{
+    background-color: #B6F0FC;
+    width: 40vw;
+    height: auto;
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto; 
+    text-align: center;
+    padding-top: 10vh;
+    padding-bottom: 5vh;
+}
+
+.txtField{
+    width: 200px;
+    height: 50px;
+    background-color: white;
+    color: rgb(44, 43, 43);
+    border-radius: 10px;
+    display: flexbox;
+    margin: 15px;
+}
 
 
 
