--- a/views/booking.handlebars
+++ b/views/booking.handlebars
@@ -7,15 +7,22 @@
 </head>
 <h1>Booking form</h1>
 <body>
+{{>header}}
+<div class="booking-page-container">
+    <div><h1>Booking form:</h1></div>
+    <div class="booking-text"><h4>Please fill in all of the fields below.</h4></div>
     <form method="POST" action="/users">
-        <input type="text" placeholder="First Name" name="firstName">
-        <input type="text" placeholder="Last Name" name="lastName">
-        <input type="text" placeholder="Email" name="email">
-        <input type="text" placeholder="Phone Number" name="phoneNumber">
-        <input type="text" placeholder="Check-in (DD.MM.YYYY)" name="check-in">
-        <input type="text" placeholder="Check-out (DD.MM.YYYY)" name="check-out">
-        <button type="submit" value="Submit user information" onclick="">Submit</button>
+        <div class="fields">
+        <input class="Id txtField" type="text" placeholder="Id" name="userId"><br>
+        <input class="First Name txtField" type="text" placeholder="First Name" name="firstName"><br>
+        <input class="Last Name txtField" type="text" placeholder="Last Name" name="lastName"><br>
+        <input class="Email txtField" type="text" placeholder="Email" name="email"><br>
+        <input class="Phone Number txtField" type="text" placeholder="Phone Number" name="phoneNumber"><br>
+        </div>
+        <button class="continue-button" type="submit" value="Submit user information" onclick="/thank-you">Submit</button>        
     </form>
+</div>
+{{>footer}}
 </body>
 </html>
 
