--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,14 @@ a:hover{
     color: #6f2c14;
 }
 
+h2{
+    padding: inherit;
+    margin: inherit;
+    margin-left: 0px !important;
+    font-size: 26px;
+    font-weight: normal;
+}
+
 /* header */
 .header {
     padding: 20px;
@@ -205,7 +213,7 @@ h2{
 	cursor: pointer;
 }
 
-.continue-button:hover{
+.continue-button:hover button:hover{
     background: #2a8eb9;
 }
 
@@ -241,6 +249,11 @@ h2{
     align-items: center;
 }
 
+.admin-id-search-form{
+    height: 50px;
+    color: rgb(44, 43, 43);
+    margin: 10px;
+}
 
 
 
