--- a/public/style.css
+++ b/public/style.css
@@ -270,6 +270,7 @@ h2{
     border-radius: 10px;
     display: flexbox;
     margin: 15px;
+}
 .admin-id-search-form{
     height: 50px;
     color: rgb(44, 43, 43);
