--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,6 +1,6 @@
 <footer>
         <div class="footer">
-            <div class="flex-gap-1 flex-gap"><a aria-label="SunnySideSuncastle logo" href="/"><img class="logo-header-footer" src="../public/images/logo2.png"></a></div>
+            <div class="flex-gap-1 flex-gap"><a aria-label="SunnySideSuncastle logo" href="/">SunnySideSuncastle<img class="logo-header-footer" src="{{this.src}}"></a></div>
             <div class="flex-gap-2 flex-gap">
                 <div class="info-text">About SSS</div>
                 <div><a class="about-us-page-button" href="#">About Us</a></div>
