--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,17 +10,23 @@
 
 
         <div class="picture-with-button">
-        <div class="cool-picture"><img class="cool-picture" src="../../public/images/coolpicture3.png"></div>
+        <img class="cool-picture" src="/public/images/coolpicture3.png" alt="Panorama picture of a sunny beach">
         <div class="white-overlay"></div>
         <a class="fill-up-booking-form-button" href="#">Sign Up</a>
         </div>
     </div>
 
     <div class="popular-options">
-        <div><h2>Popular Options:</h2></div>
-        <div class="rooms-container">
-            <div class="room1 room"></div>
-            <div class="room2 room"></div>
+        <h2>Popular Options:</h2>
+        <a href="" class="box-link">
+        <div class="room1 box">
+            <div class="room1 room flex-container" >Picture of room 1</div>
         </div>
+        </a>
+        <a href="" class="box-link">
+        <div class="room2 box">
+            <div class="room2 room flex-container">Picture of room 2</div>
+        </div>
+        </a>
     </div>
 {{>footer}}
