--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADMIN PAGE for {{companyName}} (views/admin.handlebars)</title>
+    <script src="scripts.js"></script>
 </head>
   <ul id="users"></ul>
 <body>
@@ -31,7 +32,7 @@
         </form>
         <!-- CRUD should be here -->
         {{!-- Read --}}
-        <script>
+        <!-- <script>
             fetch('/users')
             .then(response => response.json())
             .then(users => {
@@ -43,8 +44,8 @@
                 });
             })
             .catch(error => console.error('Error fetching users', error));
-        </script>
-        <button class="continue-button" type="submit">Send</button>
+        </script>  -->
+        <button class="continue-button" type="submit" onclick="getUserDetails()">Send</button>
     </div>
 {{>footer}}
 </body>
