--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -3,7 +3,7 @@
         {{!-- <a aria-label="SynnySideSuncastle logo" href="/"><img class="logo-header-footer" src="../../public/logo2.png"></a> --}}
         {{!-- this one is supposed to work but it doesnt /\ --}}
         {{!-- <a aria-label="SynnySideSuncastle logo" href="/"><img class="logo-header-footer" src="{{this.src}}"></a> --}}
-        <a aria-label="SynnySideSuncastle logo" href="/">SunnySideSuncastle<img class="logo-header-footer" src="{{this.src}}"></a>
+        <a aria-label="SynnySideSuncastle logo" href="/"><img class="logo-header-footer" src="images/logo2.png"></a>
         <div class="right-side-header">
             <button id="toggle-high-contrast">High Contrast Mode</button>
             <a class="login-page-button" href="#">Login</a>
