--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 {{>header}}
 <div class="upper-part-page">
         <div class="tagline">
-            <h1 style="height: 100 px; margin: 30px;">Tagline ideas <br>
+            <h1 style="height: 100 px; margin: 30px; text-align: center;">Tagline ideas <br>
             Every Day is a Sunny Stay<br>
             Sunny Stay Every Day<br>
             Sunny Day Your Way</h1>
@@ -10,22 +10,22 @@
 
 
         <div class="picture-with-button">
-        <img class="cool-picture" src="/public/images/coolpicture3.png" alt="Panorama picture of a sunny beach">
+        <img class="cool-picture" src="images/coolpicture3.png" alt="Panorama picture of a sunny beach">
         <div class="white-overlay"></div>
-        <a class="fill-up-booking-form-button" href="#">Sign Up</a>
+        <a class="fill-up-booking-form-button" href="/booking">Book your stay now!</a>
         </div>
     </div>
 
     <div class="popular-options">
         <h2>Popular Options:</h2>
-        <a href="" class="box-link">
+        <a href="/room1" class="box-link" >
         <div class="room1 box">
-            <div class="room1 room flex-container" >Picture of room 1</div>
+            <div class="room1 room flex-container" ><img class="room-picture" src="images/hotelrooms/room-2269594_1920.jpg" alt="A spacious 1 double bed room with a sea view, coffee machine, safe, hairdryer, television, telephone, minibar and sofa for 103€ per night"></div>   
         </div>
         </a>
-        <a href="" class="box-link">
+        <a href="/room2" class="box-link">
         <div class="room2 box">
-            <div class="room2 room flex-container">Picture of room 2</div>
+            <div class="room2 room flex-container"><img class="room-picture" src="images/hotelrooms/hotel-room-1505455_1920.jpg" alt="A spacious 1 queen bed room with a sea view, coffee machine, safe, iron, balcony, hairdryer, television, telephone, minibar, sofa and a bathtub for 165€ per night"></div>
         </div>
         </a>
     </div>
