--- a/views/edemusers.handlebars
+++ b/views/edemusers.handlebars
@@ -1,4 +1,4 @@
 <h1>USERS HERE hhh</h1>
 {{#each products}}
-  <p>{{this.firstName}}</p>
+  <p>{{this.firstName}} and {{this.lastName}}</p>
 {{/each}}
