--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,16 +17,18 @@
     </div>
 
     <div class="popular-options">
-        <h2>Popular Options:</h2>
+        <h2 class="popular">Popular Options:</h2>
+        <div class="rooms-container">
         <a href="/room1" class="box-link" >
-        <div class="room1 box">
-            <div class="room1 room flex-container" ><img class="room-picture" src="images/hotelrooms/room-2269594_1920.jpg" alt="A spacious 1 double bed room with a sea view, coffee machine, safe, hairdryer, television, telephone, minibar and sofa for 103€ per night"></div>   
-        </div>
+            <div class="room1 box">
+                <div class="room1 room flex-container" ><img class="room-picture" src="images/hotelrooms/room-2269594_1920.jpg" alt="A spacious 1 double bed room with a sea view, coffee machine, safe, hairdryer, television, telephone, minibar and sofa for 103€ per night"></div>   
+            </div>
         </a>
         <a href="/room2" class="box-link">
-        <div class="room2 box">
-            <div class="room2 room flex-container"><img class="room-picture" src="images/hotelrooms/hotel-room-1505455_1920.jpg" alt="A spacious 1 queen bed room with a sea view, coffee machine, safe, iron, balcony, hairdryer, television, telephone, minibar, sofa and a bathtub for 165€ per night"></div>
-        </div>
+            <div class="room2 box">
+                <div class="room2 room flex-container"><img class="room-picture" src="images/hotelrooms/hotel-room-1505455_1920.jpg" alt="A spacious 1 queen bed room with a sea view, coffee machine, safe, iron, balcony, hairdryer, television, telephone, minibar, sofa and a bathtub for 165€ per night"></div>
+            </div>
         </a>
+        </div>
     </div>
 {{>footer}}
