--- a/views/adminedit.handlebars
+++ b/views/adminedit.handlebars
@@ -1,3 +1,4 @@
+{{!-- I mostly used admin-crud-update to get the user and update them, the code from there should be put here (Marika) --}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
