added the table for admin page

--- a/views/admin-crud-update.handlebars
+++ b/views/admin-crud-update.handlebars
@@ -51,7 +51,7 @@
             <button onclick="confirmDelete()" id="delete-reservation" class="delete-button" type="submit">Delete
                 Reservation</button>
 
-            <button class="continue-button" type="submit">Save User</button>
+            <button class="update-button" type="submit">Update User</button>
         </form>
 
         {{!-- the script for the alert window but it's not connected to the database --}}
