--- a/public/style.css
+++ b/public/style.css
@@ -18,7 +18,7 @@ a:hover{
 }
 
 h2{
-    padding: inherit;
+    /* padding: inherit; */
     margin: inherit;
     margin-left: 0px !important;
     font-size: 26px;
@@ -217,6 +217,21 @@ h2{
     background: #2a8eb9;
 }
 
+.update-button{
+    background: #4cbb6a;
+	color: rgb(0, 0, 0);
+	border: none;
+    border-radius: 10px;
+	padding: 10px;
+    font-size: 20px;
+	cursor: pointer;
+}
+
+.update-button:hover{
+    background: #6fd78b;
+    color: rgb(0, 0, 0);
+}
+
 .delete-button{
     background: #b0413f;
 	color: white;
@@ -229,6 +244,7 @@ h2{
 
 .delete-button:hover{
     background: #993533;
+    color: white;
 }
 
 .field{
@@ -353,7 +369,7 @@ h2{
 
 .admin-page-container{
     background-color: #B6F0FC;
-    width: 40vw;
+    width: 70vw;
     height: auto;
     border-radius: 10px;
     margin-top: 20px;
@@ -370,6 +386,39 @@ h2{
     justify-content: center;
     align-items: center;
 }
+
+table{
+    margin: 20px;
+    border-collapse: collapse;
+    min-width: 400px;
+    /* border-radius: 20px 20px 0 0; does not work, same for shadow */
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); shadow looks better but it doesn't work propetly */
+}
+
+/* different colour for every second row */
+table tr:nth-of-type(even) {
+    background-color: #cef1f8;
+}
+
+th, td{
+    padding: 15px 18px;
+}
+
+th{
+    background-color: #74c5e8;
+    text-align: left;
+}
+
+tr{
+    text-align: left;
+    background-color: #fff;
+}
+
+
 
 .booking-page-container{
     background-color: #B6F0FC;
