--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADMIN PAGE for {{companyName}} (views/admin.handlebars)</title>
 </head>
-  <ul id="users"></ul>
+<ul id="users"></ul>
+
 <body>
-    
-{{>header}}
-<div class="admin-page-container">
-        <div><h1>ADMIN PAGE for {{companyName}} (views/admin.handlebars)</h1></div>
-        <div><h2>You can change your information and user information here</h2></div>
+
+    {{>header}}
+    <div class="admin-page-container">
+        <div>
+            <h1>ADMIN PAGE for {{companyName}} (views/admin.handlebars)</h1>
+        </div>
+        <div>
+            <h2>You can change your information and user information here</h2>
+        </div>
         <br>
-        <div><h2>Your information:</h2></div>
+        <div>
+            <h2>Your information:</h2>
+        </div>
         <div class="admin-container">
             <div class="fields">
                 <input class="email field" id="email" placeholder="Email address" type="email" value="" title="">
@@ -21,47 +29,47 @@
             </div>
         </div>
         <button class="continue-button" type="submit">Save My information</button>
-        <br>
-        <br>
-        <div><h2>User information:</h2></div>
-        <ol>
+            <h2>User information:</h2>
+        <table>
+            <tr>
+                <th>User ID</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>Check-In Date</th>
+                <th>Check-Out Date</th>
+                <th></th>
+                <th></th>
+            </tr>
             {{#each users}}
-                <li>
-                    User ID: {{this.userID}}, 
-                    Name: {{#if firstName}}{{this.firstName}}{{else}}N/A{{/if}} {{this.lastName}}, 
-                    Email: {{this.email}}, 
-                    Phone: {{this.phoneNumber}}
-                    {{!-- code bellow to go to the page of the specific id, but it cannot find the page, but it finds the id
-                    and it finds the id that we have managed to use, not the id from MongoDB --}}
-                    <a href="/admin-crud-update/{{this.userID}}">Update</a>
-
-                    {{!-- delete with the alert window --}}
-                    {{!-- <a onclick="confirmDelete()" href="/admin-crud-update/delete/{{this.userID}}">Delete</a> --}}
-                    <a href="/admin-crud-update/delete/{{this.userID}}">Delete</a>
-                    </li>
+            <tr>
+                <td>{{this.userID}}</td>
+                <td>{{this.firstName}} {{this.lastName}}</td>
+                <td>{{this.email}}</td>
+                <td>{{this.phoneNumber}}</td>
+                <td>Check-In Date</td>
+                <td>Check-Out Date</td>
+                <td><a class="update-button" href="/admin-crud-update/{{this.userID}}">Update</a></td>
+                <td><a onclick="confirmDelete()" class="delete-button" href="/admin-crud-update/delete/{{this.userID}}">Delete</a></td>
+            </tr>
             {{/each}}
-        </ol>
+        </table>
 
-        <div class="text">Please enter the id of the user to change their information:</div>
-        <br>
-        <form class="admin-id-search-form">
-        <input>
-        </form>
         {{!-- removed the script code here, because I couldn't cover it with comment --}}
-        <button class="continue-button" type="submit">Send</button>
         <script>
             function confirmDelete() {
-            var x;
-            if (confirm("Are you sure you want to delete this reservation?") == true) {
-                x = "Reservation was deleted";
-            } else {
-                x = "Reservation was not deleted";
-            }
-            return x;
+                var x;
+                if (confirm("Are you sure you want to delete this reservation?") == true) {
+                    x = "Reservation was deleted";
+                } else {
+                    x = "Reservation was not deleted";
+                }
+                return x;
             }
         </script>
     </div>
-    
-{{>footer}}
+
+    {{>footer}}
 </body>
+
 </html>
