--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -24,23 +24,30 @@
         <br>
         <br>
         <div><h2>User information:</h2></div>
-        <ol>
+        <table>
+            <tr>
+                <th>User ID</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>Check-In Date</th>
+                <th>Check-Out Date</th>
+                <th></th>
+                <th></th>
+            </tr>
             {{#each users}}
-                <li>
-                    User ID: {{this.userID}}, 
-                    Name: {{#if firstName}}{{this.firstName}}{{else}}N/A{{/if}} {{this.lastName}}, 
-                    Email: {{this.email}}, 
-                    Phone: {{this.phoneNumber}}
-                    {{!-- code bellow to go to the page of the specific id, but it cannot find the page, but it finds the id
-                    and it finds the id that we have managed to use, not the id from MongoDB --}}
-                    <a href="/admin-crud-update/{{this.userID}}">Update</a>
-
-                    {{!-- delete with the alert window --}}
-                    {{!-- <a onclick="confirmDelete()" href="/admin-crud-update/delete/{{this.userID}}">Delete</a> --}}
-                    <a href="/admin-crud-update/delete/{{this.userID}}">Delete</a>
-                    </li>
+            <tr>
+                <td>{{this.userID}}</td>
+                <td>{{this.firstName}} {{this.lastName}}</td>
+                <td>{{this.email}}</td>
+                <td>{{this.phoneNumber}}</td>
+                <td>Check-In Date</td>
+                <td>Check-Out Date</td>
+                <td><a class="update-button" href="/admin-crud-update/{{this.userID}}">Update</a></td>
+                <td><a onclick="confirmDelete()" class="delete-button" href="/admin-crud-update/delete/{{this.userID}}">Delete</a></td>
+            </tr>
             {{/each}}
-        </ol>
+        </table>
 
         <div class="text">Please enter the id of the user to change their information:</div>
         <br>
