delete method is working now

--- a/views/admin-crud-update.handlebars
+++ b/views/admin-crud-update.handlebars
@@ -1,7 +1,7 @@
 {{!-- this page cannot use style.css from public and throws an error --}}
 {{!-- I've hardcoded the style.css, but it still has the error --}}
 {{!-- trying to fix the error rn --}}
-{{!-- To-Do: add the grid for the users to make it look better --}}
+{{!-- To-Do: make this page prettier --}}
 <link rel="stylesheet" href="/style.css"/>
 
 
@@ -24,19 +24,6 @@
 
         {{!-- update user data --}}
         <form action="/adminpage" method="POST" autocomplete="off">
-        {{!-- fix this later \/ --}}
-            {{!-- <div class="new-date">
-                <p>New Check-In Date:</p>
-                <input class="check-in field" id="new-check-in-date" placeholder="New Check-In Date"
-                    type="new-check-in-date" value="" title="">
-            </div>
-            <div class="new-date">
-                <p>New Check-Out Date:</p>
-                <input class="check-out field" id="new-check-out-date" placeholder="New Check-Out Date"
-                    type="new-check-out-date" value="" title="">
-            </div> --}}
-
-            {{!-- important comment \/ --}}
             <p style="color: rgb(183, 15, 15)">this is a comment: I will make it so that the name can be updated,
                 but later on we should change it to check-in and out dates, I just don't want to mess up the database
                 for you guys</p>
