--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -29,7 +29,7 @@
             </div>
         </div>
         <button class="continue-button" type="submit">Save My information</button>
-            <h2>User information:</h2>
+        <h2>User information:</h2>
         <table>
             <tr>
                 <th>User ID</th>
@@ -50,22 +50,35 @@
                 <td>Check-In Date</td>
                 <td>Check-Out Date</td>
                 <td><a class="update-button" href="/admin-crud-update/{{this.userID}}">Update</a></td>
-                <td><a onclick="confirmDelete()" class="delete-button" href="/admin-crud-update/delete/{{this.userID}}">Delete</a></td>
+                <td><a class="delete-button" href="#" onclick="confirmDelete('{{this.userID}}')">Delete</a></td>
             </tr>
             {{/each}}
         </table>
 
         {{!-- removed the script code here, because I couldn't cover it with comment --}}
         <script>
-            function confirmDelete() {
-                var x;
-                if (confirm("Are you sure you want to delete this reservation?") == true) {
-                    x = "Reservation was deleted";
+            function confirmDelete(userID) {
+                if (confirm("Are you sure you want to delete this reservation?")) {
+                    fetch(`/admin-crud-update/delete/${userID}?_method=DELETE`, {
+                        method: 'POST' // Use POST method as method-override is enabled
+                    })
+                        .then(response => {
+                            if (response.ok) {
+                                console.log('User deleted successfully');
+                                location.reload(); // Reload the page after successful deletion
+                            } else {
+                                throw new Error('Failed to delete user');
+                            }
+                        })
+                        .catch(error => {
+                            console.error(error);
+                            alert('Failed to delete user');
+                        });
                 } else {
-                    x = "Reservation was not deleted";
+                    console.log("Reservation was not deleted");
                 }
-                return x;
             }
+
         </script>
     </div>
 
