--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -50,6 +50,8 @@
                 <td>Check-In Date</td>
                 <td>Check-Out Date</td>
                 <td><a class="update-button" href="/admin-crud-update/{{this.userID}}">Update</a></td>
+                {{!-- delete method is working now and let's leave at least 1 user that doesn't have an ID so that we can show Tommi
+                what happens if the user doesn't have an ID --}}
                 <td><a class="delete-button" href="#" onclick="confirmDelete('{{this.userID}}')">Delete</a></td>
             </tr>
             {{/each}}
